# FreeCAD-AI-Addon

./: .gitignore  .mcp.json  .pre-commit-config.yaml  Init.py  InitGui.py  MCP_SERVER_README.md  freecad_mcp_server.py  package.xml  pyproject.toml  requirements.txt
freecad_ai/: __init__.py  _compat.py  context.py  conversation.py  executor.py  llm_client.py  panel.py  preferences.py  registry.py  worker.py
freecad_ai/tools/: __init__.py  bim.py  draft.py  inspection.py  part.py  partdesign.py  sketcher.py
tests/: conftest.py  test_a3_hardening.py  test_context.py  test_conversation.py  test_deps.py  test_executor.py  test_llm_client.py  test_nfr.py  test_panel_integration.py  test_preferences.py  test_registry.py  test_tools_bim.py  test_tools_draft.py  test_tools_inspection.py  test_tools_part.py  test_tools_partdesign.py  test_tools_sketcher.py  test_worker_logic.py
