[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "freecad-ai-addon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",  # all 1.x and 2.x versions trigger Python 3.13 Protocol-isinstance bug; mitigated by freecad_ai/_compat.py (DEC-012)
    "keyring>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-qt>=4",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "fast: unit tests with no external deps (run in pre-commit)",
    "integration: requires real LLM endpoint",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:PySide2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true   # FreeCAD modules not available to mypy
exclude = ["tests/"]
